# graduation_thesis

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  myprog  pozdrav  prace.tex  test  test.cpp
.cache/clangd/index/: dog.cpp.34344D565E083CC8.idx  dog.h.38FE0E401227FFE8.idx  game.cpp.613F8A5E8DFFB6EB.idx  game.h.248A73A4EB6BD756.idx  game_menu.cpp.D7765BB24589DB6B.idx  game_menu.h.9290787BA95C83CD.idx  game_running.cpp.425EE2BD7941F107.idx  game_running.h.6561EC77326E2F20.idx  game_state.h.9D84BB8E734FDB7F.idx  glad.c.A186768A65E5C2CF.idx  glad.h.A167CB93A9F4D650.idx  khrplatform.h.F9E135DB3B8D292B.idx  main.cpp.33A2AA0FBD0C41CB.idx  main.cpp.EFDB08F1EA302CFB.idx  (+17 more)
archive_of_code/: colorchanging_triangle.cpp  two_triangles_1.cpp
archive_of_code/first_renders/: clean_window.cpp  color_triangle.cpp  rectangle.cpp  triangle.cpp  two_triangles_2.cpp  two_triangles_3.cpp
archive_of_code/last_state_of_main/: shader.h
archive_of_code/rectangle_with_texture/: fragmentShader.fs  main.cpp  shader.h
archive_of_code/triangle_with_header/: main.cpp
code/: cmake_install.cmake  collision_detection.cpp  collision_detection.h  compile_commands.json  extra_functions.cpp  extra_functions.h  fragmentShader.fs  fruit.cpp  fruit.h  game.cpp  game.h  game_menu.cpp  game_menu.h  game_running.cpp  game_running.h  main.cpp  player.cpp  player.h  random.cpp  random.h  rectangle.cpp  rendering_functions.cpp  rendering_functions.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h  triangle.cpp  vertices.cpp  vertices.h  window.cpp  window.h
knizka_hra/: game.h  program.cpp  resource_manager.cpp  resource_manager.h  sprite.vs  sprite_renderer.cpp  sprite_renderer.h  texture.cpp
latex/: abbreviations.tex  bibliography.bib  config.sty  prace.tex
latex/.auxfiles/: prace.aux  prace.blg  prace.fdb_latexmk  prace.fls  prace.ist  prace.out  prace.run.xml  prace.toc
latex/resources/: main  sort_n_numbers.c  sort_n_numbers.cpp
resources/shaders/: fruit.vs  rectangle.fs  rectangle.vs  text.vs
(+26 files in other folders)
